{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 13,
  "lineage": "d60413ff-95ff-1f2c-6d9c-da1fb0b8bf0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ujian-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:internet-gateway/igw-0dcf5fae764498efe",
            "id": "igw-0dcf5fae764498efe",
            "owner_id": "668579228208",
            "tags": {
              "Name": "ujian-igw"
            },
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "dependencies": [
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-ujian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c98ec4bcd6223c71",
            "owner_id": "668579228208",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcf5fae764498efe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-ujian "
            },
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ujian-igw",
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-ujian1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dbdcd605e822b5e",
            "route_table_id": "rtb-0c98ec4bcd6223c71",
            "subnet_id": "subnet-0c6ce89eec5107242"
          },
          "dependencies": [
            "aws_internet_gateway.ujian-igw",
            "aws_route_table.route-ujian",
            "aws_subnet.ujian-subnet-1",
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-ujian2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42fd00ef648bb84",
            "route_table_id": "rtb-0c98ec4bcd6223c71",
            "subnet_id": "subnet-013fb31a8a8e5d6bd"
          },
          "dependencies": [
            "aws_internet_gateway.ujian-igw",
            "aws_route_table.route-ujian",
            "aws_subnet.ujian-subnet-2",
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-ujian3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba289d818578dcb",
            "route_table_id": "rtb-0c98ec4bcd6223c71",
            "subnet_id": "subnet-064e00440005e6828"
          },
          "dependencies": [
            "aws_internet_gateway.ujian-igw",
            "aws_route_table.route-ujian",
            "aws_subnet.ujian-subnet-3",
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ujian-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-0d24828deba84370f",
            "description": "allow http inbound traffic alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d24828deba84370f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ujian-alb-http",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ujian-alb-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ujian_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-0d24cc25cc6055130",
            "description": "allow http inbound traffic",
            "egress": [],
            "id": "sg-0d24cc25cc6055130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ujian http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ujian_http",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ujian_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e42b1f8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ujian_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-024e1bf0d61f0c804",
            "description": "allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024e1bf0d61f0c804",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ujian ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ujian_ssh",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ujian_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e42b1f8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ujian-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-0c6ce89eec5107242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "21.0.1.0/24",
            "id": "subnet-0c6ce89eec5107242",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "ujian-subnet-1"
            },
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "dependencies": [
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ujian-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-013fb31a8a8e5d6bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "21.0.2.0/24",
            "id": "subnet-013fb31a8a8e5d6bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "ujian-subnet-2"
            },
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "dependencies": [
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ujian-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-064e00440005e6828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "21.0.3.0/24",
            "id": "subnet-064e00440005e6828",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "ujian-subnet-3"
            },
            "vpc_id": "vpc-0e68aac694f22db81"
          },
          "dependencies": [
            "aws_vpc.ujian-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ujian-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:vpc/vpc-0e68aac694f22db81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "21.0.0.0/16",
            "default_network_acl_id": "acl-03ccf5de96b03efee",
            "default_route_table_id": "rtb-0123e82cc067e0ac2",
            "default_security_group_id": "sg-0382dc9906aba717c",
            "dhcp_options_id": "dopt-0b90656d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e68aac694f22db81",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0123e82cc067e0ac2",
            "owner_id": "668579228208",
            "tags": {
              "Name": "ujian-vpc"
            }
          }
        }
      ]
    }
  ]
}